# azure-db-zr-bench

./: .gitignore  AGENTS.md  PR_REVIEW_SUMMARY.md  README.md  config.example.yaml  config.generated.yaml  pyproject.toml
docs/: code-review-findings.md
docs/adr/: 001-initial-architecture.md  002-code-review-findings-analysis-review.md  002-code-review-findings-analysis.md
docs/agent-brief/: v1-initial-build.md
infra/: main.bicep  main.parameters.example.json
results/: README.md  report.html  report.md  report1.md  report2.html  report2.md  report3.html  report3.md
scripts/: cleanup.sh  deploy.sh  run-suite.sh  setup-vm.sh
src/azure_db_zr_bench/: __init__.py  benchmark.py  cli.py  config.py  providers.py  report.py
